intentando usar React

--- a/peliculas.html
+++ b/peliculas.html
@@ -111,12 +111,12 @@
 
                         <div class="pelicula">
                             <img src="https://static.voyalcine.net/Uploads/i1541.jpg" alt="">
-                            <h6>El exorcista</h6>
+                            <h6>El suplente</h6>
                         </div>
 
                         <div class="pelicula">
                             <img src="https://static.voyalcine.net/Uploads/i1362.jpg" alt="">
-                            <h6>ONE PIECE</h6>
+                            <h6>El exorcista</h6>
                         </div>
                     </div>
 
