--- a/candy.html
+++ b/candy.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/cine.css">
-    <link rel="stylesheet" href="css/mantenimiento.css">
+    <link rel="stylesheet" href="css/candy.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -45,16 +45,6 @@
     <main class="holder-pelis">
 
         <div class="abc">
-            <div class="row" id="aviso">
-                <div class="col-6"><img class="maitenance" src="https://www.nicepng.com/png/full/412-4125871_maintenance-icon-png-herramientas-de-mantenimiento-preventivo-animadas.png" alt=""></div>
-                <div class="col-6"><h2>ESTAMOS EN MANTENIMIENTO! <br>PRONTO ESTARÁ DISPONIBLE ESTA SECCIÓN</h2></div>
-              </div>
-            </div>
-            <div class="container-fluid">
-                
-    
-            </div>
-
         </div>
 
     </main>
