--- a/peliculas.html
+++ b/peliculas.html
@@ -58,6 +58,18 @@
                         <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/521.png" class="d-block w-100"
                             alt="...">
                     </div>
+                    <div class="carousel-item">
+                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/524.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/523.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/525.png" class="d-block w-100"
+                            alt="...">
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
                     data-bs-slide="prev">
