--- a/ingresar.html
+++ b/ingresar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/cine.css">
-    <link rel="stylesheet" href="css/mantenimiento.css">
+    <link rel="stylesheet" href="css/ingresar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -44,9 +44,28 @@
     <main class="holder-pelis">
 
         <div class="abc">
-            <div class="row" id="aviso">
-                <div class="col-6"><img class="maitenance" src="https://www.nicepng.com/png/full/412-4125871_maintenance-icon-png-herramientas-de-mantenimiento-preventivo-animadas.png" alt=""></div>
-                <div class="col-6"><h2>ESTAMOS EN MANTENIMIENTO! <br>PRONTO ESTARÁ DISPONIBLE ESTA SECCIÓN</h2></div>
+            <div class="row">
+                <form>
+                <div class="row mb-3">
+                  <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword3" placeholder="Contraseña">
+                  </div>
+                </div>
+                    <div class="col-sm-10">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                        <label class="form-check-label" for="gridCheck1">
+                          Recordar Usuario
+                        </label>
+                      </div>
+                    </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+              </form>
               </div>
             </div>
             <div class="container-fluid">
