Arreglando errores con "ReactJS"

--- a/peliculas.html
+++ b/peliculas.html
@@ -86,48 +86,48 @@
                 <div class="cartelera">
                     <div class="d-flex flex-wrap">
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1545.jpg" alt="">
+                            <img src="img/i1545.jpg" alt="">
                             <h6>One Piece Film Red</h6>
                         </div>
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1482.jpg" alt="">
+                            <img src="img/i1482.jpg" alt="">
                             <h6>Astro-Stargazer: Astroscope</h6>
                         </div>
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1531.jpg" alt="">
+                            <img src="img/i1531.jpg" alt="">
                             <h6>Pantera Negra: Wakanda por siempre</h6>
                         </div>
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1440.jpg" alt="">
+                            <img src="img/i1440 (1).jpg" alt="">
                             <h6>Coldplay live broadcast from Buenos Aires</h6>
                         </div>
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1456.jpg" alt="">
+                            <img src="img/i1456.jpg" alt="">
                             <h6>Sonríe</h6>
                         </div>
 
                         <div class="pelicula">
-                            <img src="https://www.e-wavegroup.com/uploads/i1260.jpg" alt="">
+                            <img src="img/i1260.jpg" alt="">
                             <h6>30 Noches con mi ex</h6>
                         </div>
 
                         <div class="pelicula">
-                            <img src="https://www.e-wavegroup.com/uploads/i1268.jpg" alt="">
+                            <img src="img/i1268.jpg" alt="">
                             <h6>El perro samurai: la leyenda de Kakamucho</h6>
                         </div>
 
                         <div class="pelicula">
-                            <img src="https://www.e-wavegroup.com/uploads/i1373.jpg" alt="">
+                            <img src="img/i1373.jpg" alt="">
                             <h6>Más respeto que soy tu madre</h6>
                         </div>
 
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1541.jpg" alt="">
+                            <img src="img/i1541.jpg" alt="">
                             <h6>El suplente</h6>
                         </div>
 
                         <div class="pelicula">
-                            <img src="https://static.voyalcine.net/Uploads/i1362.jpg" alt="">
+                            <img src="img/i1362.jpg" alt="">
                             <h6>El exorcista</h6>
                         </div>
                     </div>
