Completando la sección INGRESAR con un form y un slider, y agregando la sección NOVEDADES

--- a/candy.html
+++ b/candy.html
@@ -22,7 +22,7 @@
                   <div class="col col-lg-2">
                   </div>
                   <div class="col-md-auto">
-                    <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
+                    <a href="peliculas.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
                             class="logo"></a>
                   </div>
                   <div class="col col-lg-2">
@@ -33,7 +33,7 @@
                     <li><a href="peliculas.html">PELICULAS</a></li>
                     <li><a class="activo" href="candy.html">CANDY</a></li>
                     <li><a href="servicio.html">SERVICIO</a></li>
-                    <li><a href="buscar.html">BUSCAR</a></li>
+                    <li><a href="novedades.html">NOVEDADES</a></li>
                     <li><a href="ingresar.html">INGRESAR</a></li>
                 </ul>
             </nav>
