--- a/peliculas.html
+++ b/peliculas.html
@@ -21,7 +21,7 @@
                     <div class="col col-lg-2">
                     </div>
                     <div class="col-md-auto">
-                        <a href="index.html"><img
+                        <a href="peliculas.html"><img
                                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
                                 class="logo"></a>
                     </div>
@@ -33,7 +33,7 @@
                         <li><a class="activo" href="peliculas.html">PELICULAS</a></li>
                         <li><a href="candy.html">CANDY</a></li>
                         <li><a href="servicio.html">SERVICIO</a></li>
-                        <li><a href="buscar.html">BUSCAR</a></li>
+                        <li><a href="novedades.html">NOVEDADES</a></li>
                         <li><a href="ingresar.html">INGRESAR</a></li>
                     </ul>
                 </nav>
@@ -46,29 +46,17 @@
 
             <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/522.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item active"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/516.png" class="d-block w-100" alt="pelicula1928"></a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/516.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/522.png" class="d-block w-100" alt="ficja"> </a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/521.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/521.png" class="d-block w-100" alt="astroscope"></a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/524.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item"><a href="#"> <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/524.png" class="d-block w-100" alt="laluzdeldiablo"> </a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/523.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/523.png" class="d-block w-100" alt="onepiecered"></a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/525.png" class="d-block w-100"
-                            alt="...">
+                    <div class="carousel-item"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/525.png" class="d-block w-100" alt="siniestra5"></a>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
