Actualizando página y poniendo JS en la sección 'CANDY'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="col col-lg-2">
                     </div>
                     <div class="col-md-auto">
-                        <a href="peliculas.html"><img
+                        <a href="index.html"><img
                                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
                                 class="logo"></a>
                     </div>
@@ -30,7 +30,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a class="activo" href="peliculas.html">PELICULAS</a></li>
+                        <li><a class="activo" href="index.html">PELICULAS</a></li>
                         <li><a href="candy.html">CANDY</a></li>
                         <li><a href="servicio.html">SERVICIO</a></li>
                         <li><a href="novedades.html">NOVEDADES</a></li>
@@ -46,7 +46,7 @@
 
             <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
                 <div class="carousel-inner">
-                    <div class="carousel-item active"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/516.png" class="d-block w-100" alt="pelicula1928"></a>
+                    <div class="carousel-item active"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/529.png" class="d-block w-100" alt="pelicula1928"></a>
                     </div>
                     <div class="carousel-item"><a href="#"><img src="https://static.cinemarkhoyts.com.ar/Images/Highlights/522.png" class="d-block w-100" alt="ficja"> </a>
                     </div>
