--- a/ingresar.html
+++ b/ingresar.html
@@ -22,7 +22,7 @@
           <div class="col col-lg-2">
           </div>
           <div class="col-md-auto">
-            <a href="peliculas.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png"
+            <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png"
                 alt="logo" class="logo"></a>
           </div>
           <div class="col col-lg-2">
@@ -30,7 +30,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="peliculas.html">PELICULAS</a></li>
+            <li><a href="index.html">PELICULAS</a></li>
             <li><a href="candy.html">CANDY</a></li>
             <li><a href="servicio.html">SERVICIO</a></li>
             <li><a href="novedades.html">NOVEDADES</a></li>
@@ -39,6 +39,7 @@
         </nav>
 
       </div>
+    </div> 
   </header>
 
   <main class="holder-pelis">
@@ -69,6 +70,7 @@
 
           </form>
         </div>
+        <div class="col"></div>
         <div class="col">
 
 
