--- a/candy.html
+++ b/candy.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/cine.css">
     <link rel="stylesheet" href="css/candy.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="js/candy.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                   <div class="col col-lg-2">
                   </div>
                   <div class="col-md-auto">
-                    <a href="peliculas.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
+                    <a href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
                             class="logo"></a>
                   </div>
                   <div class="col col-lg-2">
@@ -30,7 +31,7 @@
                 </div>
             <nav>
                 <ul>
-                    <li><a href="peliculas.html">PELICULAS</a></li>
+                    <li><a href="index.html">PELICULAS</a></li>
                     <li><a class="activo" href="candy.html">CANDY</a></li>
                     <li><a href="servicio.html">SERVICIO</a></li>
                     <li><a href="novedades.html">NOVEDADES</a></li>
@@ -42,12 +43,33 @@
         </div>
     </header>
 
-    <main class="holder-pelis">
+   <main class="holder-pelis">
+    <div class="abc">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
 
-        <div class="abc">
+          <form class="dataForm">
+            <div class="row mb-3">
+              <div class="col-sm-10">
+                <input type="name" class="form-control" id="inputEmail3" placeholder="Nombre">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="inputPassword3" placeholder="¿Cuánto dinero tenes?">
+              </div>
+            </div>
+            <div class="col-sm-10">
+            </div>
+            <button type="submit" class="btn btn-primary" onclick="ir()">ENTRAR AL CANDY</button>
+
+          </form>
         </div>
+        <div class="col"></div>
 
-    </main>
+  </main>
+
 
     
     <footer>
