--- a/novedades.html
+++ b/novedades.html
@@ -22,7 +22,7 @@
                     <div class="col col-lg-2">
                     </div>
                     <div class="col-md-auto">
-                        <a href="peliculas.html"><img
+                        <a href="index.html"><img
                                 src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikimedia-logo.png" alt="logo"
                                 class="logo"></a>
                     </div>
@@ -31,7 +31,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="peliculas.html">PELICULAS</a></li>
+                        <li><a href="index.html">PELICULAS</a></li>
                         <li><a href="candy.html">CANDY</a></li>
                         <li><a href="servicio.html">SERVICIO</a></li>
                         <li><a class="activo" href="novedades.html">NOVEDADES</a></li>
