Haciendo tareas de JS

--- a/novedades.html
+++ b/novedades.html
@@ -36,6 +36,7 @@
                         <li><a href="servicio.html">SERVICIO</a></li>
                         <li><a class="activo" href="novedades.html">NOVEDADES</a></li>
                         <li><a href="ingresar.html">INGRESAR</a></li>
+                        <li><a href="tareas.html">TAREAS</a></li>
                     </ul>
                 </nav>
                 
