--- a/servicio.html
+++ b/servicio.html
@@ -37,6 +37,7 @@
                         <li><a class="activo" href="servicio.html">SERVICIO</a></li>
                         <li><a href="novedades.html">NOVEDADES</a></li>
                         <li><a href="ingresar.html">INGRESAR</a></li>
+                        <li><a href="tareas.html">TAREAS</a></li>
                     </ul>
                 </nav>
 
