--- a/ingresar.html
+++ b/ingresar.html
@@ -35,6 +35,7 @@
             <li><a href="servicio.html">SERVICIO</a></li>
             <li><a href="novedades.html">NOVEDADES</a></li>
             <li><a class="activo" href="ingresar.html">INGRESAR</a></li>
+            <li><a href="tareas.html">TAREAS</a></li>
           </ul>
         </nav>
 
